test/files/neg/ambiguous-float-dots.check
ambiguous-float-dots.scala:2: warning: This lexical syntax is deprecated.  From scala 2.11, a dot will only be considered part of a number if it is immediately followed by a digit.
  val x0 = 5.
           ^
ambiguous-float-dots.scala:6: warning: This lexical syntax is deprecated.  From scala 2.11, a dot will only be considered part of a number if it is immediately followed by a digit.
  val x1 = 5.f
           ^
ambiguous-float-dots.scala:7: warning: Treating numbers with a leading zero as octal is deprecated.
  val y0 = 055
           ^
ambiguous-float-dots.scala:11: warning: This lexical syntax is deprecated.  From scala 2.11, a dot will only be considered part of a number if it is immediately followed by a digit.
  1.+(2)
  ^
ambiguous-float-dots.scala:12: warning: This lexical syntax is deprecated.  From scala 2.11, a dot will only be considered part of a number if it is immediately followed by a digit.
  1. + 2
  ^
ambiguous-float-dots.scala:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  1.+(2)
    ^
ambiguous-float-dots.scala:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  1. + 2
     ^
ambiguous-float-dots.scala:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  1 + 2
    ^
error: No warnings can be incurred under -Xfatal-warnings.
8 warnings found
one error found
